BUGFR-1409: Seller Inventory table align

--- a/src/containers/SellerFinder/SellerDetails/InventoryProducts/index.scss
+++ b/src/containers/SellerFinder/SellerDetails/InventoryProducts/index.scss
@@ -193,6 +193,7 @@ $blue: #349af8;
 
     span.buy-box-count {
       margin-right: 4px !important;
+      min-width: 24px !important;
     }
 
     div.check-seller-btn {
